# NeuraDock

./: .gitignore  Makefile  README.md  README_EN.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/config/providers/: builtin_providers.json
apps/desktop/src-tauri/crates/neuradock-app/: Cargo.toml
apps/desktop/src-tauri/crates/neuradock-app/icons/: icon.icns
apps/desktop/src-tauri/crates/neuradock-app/src/: main.rs
apps/desktop/src-tauri/crates/neuradock-app/src/application/: mod.rs  provider_seeder.rs
apps/desktop/src-tauri/crates/neuradock-app/src/application/commands/: account_commands.rs  mod.rs  notification_commands.rs
apps/desktop/src-tauri/crates/neuradock-app/src/application/config/: timeouts.rs
apps/desktop/src-tauri/crates/neuradock-app/src/application/dtos/: account_dto.rs  balance_dto.rs  check_in_dto.rs  independent_key_dto.rs  mod.rs  notification_dto.rs  provider_dto.rs  proxy_config_dto.rs  streak_dto.rs  token_dto.rs
apps/desktop/src-tauri/crates/neuradock-app/src/application/event_handlers/: scheduler_reload_handler.rs
apps/desktop/src-tauri/crates/neuradock-app/src/presentation/: bootstrap.rs  commands.rs  error.rs  events.rs  ipc.rs  mod.rs  state.rs
apps/desktop/src-tauri/crates/neuradock-domain/src/: lib.rs
apps/desktop/src-tauri/crates/neuradock-domain/src/account/: aggregate.rs  aggregate_test.rs
apps/desktop/src-tauri/crates/neuradock-domain/src/balance/: mod.rs
apps/desktop/src-tauri/crates/neuradock-domain/src/balance_history/: mod.rs  repository.rs  types.rs
apps/desktop/src-tauri/crates/neuradock-domain/src/check_in/: aggregate_test.rs  domain_service.rs  mod.rs  provider.rs  value_objects.rs  value_objects_test.rs
apps/desktop/src-tauri/crates/neuradock-domain/src/events/: account_events.rs
apps/desktop/src-tauri/crates/neuradock-domain/src/independent_key/: aggregate.rs  mod.rs  repository.rs
apps/desktop/src-tauri/crates/neuradock-domain/src/notification/: aggregate.rs  mod.rs  repository.rs  sender.rs  value_objects.rs
apps/desktop/src-tauri/crates/neuradock-domain/src/provider_models/: mod.rs  repository.rs
apps/desktop/src-tauri/crates/neuradock-domain/src/proxy_config/: config.rs  mod.rs  proxy_config.rs  repository.rs
apps/desktop/src-tauri/crates/neuradock-domain/src/session/: mod.rs  token_extractor.rs
apps/desktop/src-tauri/crates/neuradock-domain/src/shared/: mod.rs  transaction.rs
apps/desktop/src-tauri/crates/neuradock-domain/src/token/: aggregate.rs  mod.rs
apps/desktop/src-tauri/crates/neuradock-domain/src/waf_cookies/: mod.rs  repository.rs
apps/desktop/src-tauri/crates/neuradock-infrastructure/migrations/: 20250202000001_drop_unused_tables.sql  20251204000001_add_provider_models.sql  20251204000002_add_waf_cookies.sql  20251205000001_add_model_limits_enabled.sql  20251205000002_fix_model_limits_enabled.sql  20251220000002_update_check_in_interval_default.sql  20251220000003_add_proxy_settings.sql  20251221000001_rename_total_income_to_total_quota.sql
apps/desktop/src-tauri/crates/neuradock-infrastructure/src/: lib.rs
apps/desktop/src-tauri/crates/neuradock-infrastructure/src/bootstrap/: builtin_providers.rs  mod.rs
apps/desktop/src-tauri/crates/neuradock-infrastructure/src/browser/: pool.rs
apps/desktop/src-tauri/crates/neuradock-infrastructure/src/config/: timeouts.rs
apps/desktop/src-tauri/crates/neuradock-infrastructure/src/events/: in_memory_event_bus.rs
apps/desktop/src-tauri/crates/neuradock-infrastructure/src/http/: client.rs  waf_bypass.rs
apps/desktop/src-tauri/crates/neuradock-infrastructure/src/logging/: mod.rs
apps/desktop/src-tauri/crates/neuradock-infrastructure/src/notification/: feishu.rs  mod.rs  repository.rs  sender_factory.rs
apps/desktop/src-tauri/crates/neuradock-infrastructure/src/persistence/: database.rs  mod.rs  transaction.rs
apps/desktop/src-tauri/crates/neuradock-infrastructure/src/plugins/: agentrouter.rs  anyrouter.rs
apps/desktop/src-tauri/crates/neuradock-infrastructure/src/security/: key_manager.rs
apps/desktop/src-tauri/crates/neuradock-infrastructure/tests/: account_repository_integration.rs  balance_history_repository_integration.rs  balance_repository_integration.rs  e2e_check_in_flow.rs  e2e_error_scenarios.rs  session_repository_integration.rs
apps/desktop/src-tauri/examples/: check_encryption.rs
apps/desktop/src-tauri/migrations/: 20250121000001_initial_schema.sql  20250130000001_add_performance_indexes.sql  20250130000002_encrypt_existing_credentials.sql
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/application/: mod.rs
apps/desktop/src-tauri/src/application/commands/: account_commands.rs  check_in_commands.rs  command_handler.rs  mod.rs
apps/desktop/src-tauri/src/application/commands/handlers/: create_account_handler.rs  delete_account_handler.rs  execute_check_in_handler.rs  mod.rs  toggle_account_handler.rs  update_account_handler.rs
apps/desktop/src-tauri/src/application/dtos/: mod.rs
apps/desktop/src-tauri/src/application/event_handlers/: mod.rs  scheduler_reload_handler.rs
apps/desktop/src-tauri/src/application/services/: check_in_executor.rs  scheduler.rs
apps/desktop/src-tauri/src/domain/: mod.rs
apps/desktop/src-tauri/src/domain/account/: aggregate.rs  aggregate_test.rs  mod.rs
apps/desktop/src-tauri/src/domain/check_in/: value_objects.rs
apps/desktop/src-tauri/src/domain/events/: account_events.rs  event_bus.rs  mod.rs
apps/desktop/src-tauri/src/domain/plugins/: mod.rs  registry.rs
apps/desktop/src-tauri/src/domain/shared/: mod.rs
apps/desktop/src-tauri/src/infrastructure/: mod.rs
apps/desktop/src-tauri/src/infrastructure/events/: in_memory_event_bus.rs  mod.rs
apps/desktop/src-tauri/src/infrastructure/persistence/repositories/: account_repo.rs
apps/desktop/src-tauri/src/infrastructure/plugins/: agentrouter.rs  anyrouter.rs  mod.rs
apps/desktop/src-tauri/src/infrastructure/security/: encryption.rs  key_manager.rs  mod.rs
apps/desktop/src-tauri/src/presentation/: commands.rs  events.rs  state.rs
docs/: README.md  changelog.md  (+5 more)
(+224 files in other folders)
