[workspace]
resolver = "2"
members = [
    "crates/neuradock-domain",
    "crates/neuradock-infrastructure",
    "crates/neuradock-app",
]
default-members = ["crates/neuradock-app"]

[workspace.package]
version = "0.1.0"
authors = ["NeuraDock"]
edition = "2021"
license = "GPL-3.0"

[workspace.dependencies]
# Internal crates
neuradock-domain = { path = "crates/neuradock-domain" }
neuradock-infrastructure = { path = "crates/neuradock-infrastructure" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "ansi", "chrono", "local-time"] }
tracing-appender = "0.2"
tracing-log = "0.2"
dirs = "5.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls", "gzip", "socks"] }

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# Browser automation
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }

# URL handling
url = { version = "2.5", features = ["serde"] }

# Cron scheduling
tokio-cron-scheduler = "0.13"

# Tauri
tauri = { version = "2.1", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-notification = "2.2"
tauri-plugin-opener = "2.2"
tauri-plugin-os = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-store = "2.2"
tauri-plugin-window-state = "2.2"

# Type-safe IPC
tauri-specta = { version = "2.0.0-rc.20", features = ["derive", "typescript"] }
specta = { version = "2.0.0-rc.20", features = ["derive", "chrono"] }
specta-typescript = "0.0.7"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "hostname", "smtp-transport"] }

# Dev dependencies
mockall = "0.13"
tempfile = "3.13"

# For Tauri CLI compatibility, re-export the app package
[package]
name = "neuradock"
version = "0.1.0"
description = "Auto check-in manager for API services"
authors = ["NeuraDock"]
edition = "2021"

[lib]
name = "neuradock_lib"
path = "crates/neuradock-app/src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "NeuraDock"
path = "crates/neuradock-app/src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Internal workspace crates
neuradock-domain = { workspace = true }
neuradock-infrastructure = { workspace = true }

# Tauri
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-os = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-store = { workspace = true }
tauri-plugin-window-state = { workspace = true }

# Type-safe IPC
tauri-specta = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Cryptography
sha2 = "0.10"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }
env_logger = "0.11"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dirs = { workspace = true }

# Utilities
once_cell = "1.20"

# Database
sqlx = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Browser automation
chromiumoxide = { workspace = true }

# URL handling
url = { workspace = true }

# Cron scheduling
tokio-cron-scheduler = { workspace = true }

# Email
lettre = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
